# exemem-client

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  passkey.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  query.rs  scanner.rs  uploader.rs  watcher.rs
src-tauri/src/storage/: api_store.rs  mod.rs  namespaced_store.rs
src/components/: QueryPanel.jsx  SettingsPanel.jsx  Sidebar.jsx  SyncPanel.jsx
src/components/shared/: CategoryBadge.jsx  ProgressBar.jsx  StatusBadge.jsx
