[package]
name = "exemem-client"
version = "0.1.0"
description = "Exemem Client - Background sync app for cloud ingestion"
authors = ["Tom Tang <tom@datafold.ai>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "exemem_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"

notify = "7"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
log = "0.4"
mime_guess = "2"
url = "2"
